Fix filesquash-img styles

--- a/src/components/img/img.scss
+++ b/src/components/img/img.scss
@@ -1,3 +1,7 @@
 filesquash-img {
   display: inline-block;
+
+  > img {
+    display: block;
+  }
 }
